# internal/composer/router/component.go
@@ -8,6 +8,7 @@ import (
 	"regexp"
 
 	"github.com/go-logr/logr"
+	adminapi "github.com/trebent/kerberos/internal/api/admin"
 	apierror "github.com/trebent/kerberos/internal/api/error"
 	"github.com/trebent/kerberos/internal/composer"
 	"github.com/trebent/kerberos/internal/config"
@@ -66,13 +67,28 @@ func (r *router) Next(next composer.FlowComponent) {
 }
 
 // GetMeta implements [composer.FlowComponent].
-func (r *router) GetMeta() []*composer.FlowMeta {
-	return append([]*composer.FlowMeta{
+func (r *router) GetMeta() []adminapi.FlowMeta {
+	fmd := adminapi.FlowMeta_Data{}
+	if err := fmd.FromFlowMetaDataRouter(adminapi.FlowMetaDataRouter{
+		Backends: func() *[]adminapi.FlowMetaDataRouterBackend {
+			var backends []adminapi.FlowMetaDataRouterBackend
+			for _, backend := range r.cfg.Backends {
+				backends = append(backends, adminapi.FlowMetaDataRouterBackend{
+					Name: backend.Name,
+					Host: backend.Host,
+					Port: backend.Port,
+				})
+			}
+			return &backends
+		}(),
+	}); err != nil {
+		panic(err)
+	}
+
+	return append([]adminapi.FlowMeta{
 		{
 			Name: "router",
-			Data: map[string]any{
-				"backends": r.cfg.Backends,
-			},
+			Data: fmd,
 		},
 	}, r.next.GetMeta()...)
 }
